--- a/styles/base.css
+++ b/styles/base.css
@@ -562,9 +562,22 @@ video {
   margin: 1.25rem;
 }
 
+.m-2 {
+  margin: 0.5rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
+
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .grid {
@@ -595,6 +608,10 @@ video {
   height: 8rem;
 }
 
+.h-28 {
+  height: 7rem;
+}
+
 .w-12 {
   width: 3rem;
 }
@@ -605,6 +622,14 @@ video {
 
 .w-32 {
   width: 8rem;
+}
+
+.w-28 {
+  width: 7rem;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .flex-initial {
@@ -622,6 +647,10 @@ video {
 
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .content-center {
@@ -749,6 +778,26 @@ video {
 
 .p-16 {
   padding: 4rem;
+}
+
+.p-12 {
+  padding: 3rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+
+.pb-6 {
+  padding-bottom: 1.5rem;
 }
 
 .text-center {
