--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -16,7 +16,7 @@
   /* 2 */
   border-style: solid;
   /* 2 */
-  border-color: #e5e7eb;
+  border-color: currentColor;
   /* 2 */
 }
 
@@ -516,33 +516,69 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.m-0 {
+  margin: 0px;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.ml-auto {
+  margin-left: auto;
 }
 
 .mt-5 {
   margin-top: 1.25rem;
 }
 
-.grid {
-  display: grid;
+.mr-auto {
+  margin-right: auto;
+}
+
+.flex {
+  display: flex;
 }
 
 .h-24 {
   height: 6rem;
 }
 
+.h-20 {
+  height: 5rem;
+}
+
 .w-24 {
   width: 6rem;
 }
 
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
+.w-5\/6 {
+  width: 83.333333%;
 }
 
-.rounded-2xl {
-  border-radius: 1rem;
+.w-20 {
+  width: 5rem;
+}
+
+.basis-1\/4 {
+  flex-basis: 25%;
+}
+
+.basis-2\/4 {
+  flex-basis: 50%;
+}
+
+.basis-3\/4 {
+  flex-basis: 75%;
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-col {
+  flex-direction: column;
 }
 
 .rounded-md {
@@ -553,31 +589,21 @@ video {
   border-width: 2px;
 }
 
-.border-slate-900 {
-  --tw-border-opacity: 1;
-  border-color: rgb(15 23 42 / var(--tw-border-opacity));
+.bg-head {
+  --tw-bg-opacity: 1;
+  background-color: rgb(44 44 84 / var(--tw-bg-opacity));
 }
 
-.bg-emerald-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(167 243 208 / var(--tw-bg-opacity));
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+.p-1 {
+  padding: 0.25rem;
 }
 
 .p-12 {
   padding: 3rem;
 }
 
-.p-3 {
-  padding: 0.75rem;
-}
-
-.p-4 {
-  padding: 1rem;
+.p-2 {
+  padding: 0.5rem;
 }
 
 .p-5 {
@@ -588,12 +614,8 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.pl-44 {
-  padding-left: 11rem;
-}
-
-.pr-44 {
-  padding-right: 11rem;
+.text-left {
+  text-align: left;
 }
 
 .text-center {
@@ -609,21 +631,52 @@ video {
   line-height: 2rem;
 }
 
-.font-extrabold {
-  font-weight: 800;
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.font-bold {
+  font-weight: 700;
 }
 
 .italic {
   font-style: italic;
 }
 
+.text-text {
+  --tw-text-opacity: 1;
+  color: rgb(239 242 241 / var(--tw-text-opacity));
+}
+
 @media (min-width: 768px) {
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
+  .md\:m-10 {
+    margin: 2.5rem;
+  }
+
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 }
 
 @media (min-width: 1024px) {
+  .lg\:h-24 {
+    height: 6rem;
+  }
+
+  .lg\:w-24 {
+    width: 6rem;
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
+  .lg\:text-left {
+    text-align: left;
+  }
+
   .lg\:text-5xl {
     font-size: 3rem;
     line-height: 1;
