--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -516,6 +516,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.invisible {
+  visibility: hidden;
+}
+
 .m-0 {
   margin: 0px;
 }
@@ -525,12 +529,12 @@ video {
   margin-right: auto;
 }
 
-.ml-auto {
-  margin-left: auto;
-}
-
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.ml-auto {
+  margin-left: auto;
 }
 
 .mr-auto {
@@ -541,24 +545,24 @@ video {
   display: flex;
 }
 
-.h-24 {
-  height: 6rem;
-}
-
 .h-20 {
   height: 5rem;
 }
 
-.w-24 {
-  width: 6rem;
+.h-24 {
+  height: 6rem;
 }
 
-.w-5\/6 {
-  width: 83.333333%;
+.h-auto {
+  height: auto;
 }
 
 .w-20 {
   width: 5rem;
+}
+
+.w-24 {
+  width: 6rem;
 }
 
 .basis-1\/4 {
@@ -581,6 +585,10 @@ video {
   flex-direction: column;
 }
 
+.content-end {
+  align-content: flex-end;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -591,7 +599,7 @@ video {
 
 .bg-head {
   --tw-bg-opacity: 1;
-  background-color: rgb(44 44 84 / var(--tw-bg-opacity));
+  background-color: rgb(250 214 67 / var(--tw-bg-opacity));
 }
 
 .p-1 {
@@ -606,16 +614,12 @@ video {
   padding: 0.5rem;
 }
 
-.p-5 {
-  padding: 1.25rem;
+.p-6 {
+  padding: 1.5rem;
 }
 
 .pb-6 {
   padding-bottom: 1.5rem;
-}
-
-.text-left {
-  text-align: left;
 }
 
 .text-center {
@@ -636,8 +640,21 @@ video {
   line-height: 2.25rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .font-bold {
   font-weight: 700;
+}
+
+.font-extrabold {
+  font-weight: 800;
+}
+
+.font-normal {
+  font-weight: 400;
 }
 
 .italic {
@@ -646,7 +663,7 @@ video {
 
 .text-text {
   --tw-text-opacity: 1;
-  color: rgb(239 242 241 / var(--tw-text-opacity));
+  color: rgb(53 34 8 / var(--tw-text-opacity));
 }
 
 @media (min-width: 768px) {
@@ -661,6 +678,10 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:visible {
+    visibility: visible;
+  }
+
   .lg\:h-24 {
     height: 6rem;
   }
@@ -675,6 +696,11 @@ video {
 
   .lg\:text-left {
     text-align: left;
+  }
+
+  .lg\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 
   .lg\:text-5xl {
