--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -537,6 +537,10 @@ video {
   display: flex;
 }
 
+.hidden {
+  display: none;
+}
+
 .h-20 {
   height: 5rem;
 }
@@ -551,6 +555,10 @@ video {
 
 .h-auto {
   height: auto;
+}
+
+.h-5 {
+  height: 1.25rem;
 }
 
 .w-20 {
@@ -568,6 +576,10 @@ video {
 
 .w-auto {
   width: auto;
+}
+
+.w-5 {
+  width: 1.25rem;
 }
 
 .basis-1\/4 {
@@ -654,6 +666,10 @@ video {
   padding: 2.5rem;
 }
 
+.p-2\.5 {
+  padding: 0.625rem;
+}
+
 .pt-5 {
   padding-top: 1.25rem;
 }
@@ -678,6 +694,11 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .font-bold {
@@ -715,6 +736,17 @@ video {
 .hover\:text-text:hover {
   --tw-text-opacity: 1;
   color: rgb(53 34 8 / var(--tw-text-opacity));
+}
+
+.focus\:outline-none:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.focus\:ring-4:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
 @media (min-width: 640px) {
