--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -524,8 +524,28 @@ video {
   margin: 1rem;
 }
 
+.m-10 {
+  margin: 2.5rem;
+}
+
+.m-20 {
+  margin: 5rem;
+}
+
+.m-2 {
+  margin: 0.5rem;
+}
+
 .mx-auto {
   margin-left: auto;
+  margin-right: auto;
+}
+
+.ml-auto {
+  margin-left: auto;
+}
+
+.mr-auto {
   margin-right: auto;
 }
 
@@ -647,6 +667,10 @@ video {
     margin: 2rem;
   }
 
+  .md\:m-10 {
+    margin: 2.5rem;
+  }
+
   .md\:h-auto {
     height: auto;
   }
@@ -666,12 +690,12 @@ video {
     margin: 2.5rem;
   }
 
-  .lg\:h-24 {
-    height: 6rem;
+  .lg\:m-20 {
+    margin: 5rem;
   }
 
-  .lg\:w-24 {
-    width: 6rem;
+  .lg\:h-24 {
+    height: 6rem;
   }
 
   .lg\:w-28 {
