--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -516,6 +516,10 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.visible {
+  visibility: visible;
+}
+
 .invisible {
   visibility: hidden;
 }
@@ -524,9 +528,21 @@ video {
   margin: 0.5rem;
 }
 
+.m-4 {
+  margin: 1rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.ml-4 {
+  margin-left: 1rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
 }
 
 .flex {
@@ -539,6 +555,10 @@ video {
 
 .h-44 {
   height: 11rem;
+}
+
+.h-48 {
+  height: 12rem;
 }
 
 .w-20 {
@@ -557,6 +577,10 @@ video {
   flex-direction: column;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -571,13 +595,17 @@ video {
 }
 
 .bg-canva {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 248 242 / var(--tw-bg-opacity));
+  background-color: rgb(189, 147, 249, .1);
 }
 
 .bg-head {
   --tw-bg-opacity: 1;
-  background-color: rgb(68 71 90 / var(--tw-bg-opacity));
+  background-color: rgb(40 42 54 / var(--tw-bg-opacity));
+}
+
+.bg-buttom {
+  --tw-bg-opacity: 1;
+  background-color: rgb(80 250 123 / var(--tw-bg-opacity));
 }
 
 .p-1 {
@@ -596,8 +624,16 @@ video {
   padding: 1.25rem;
 }
 
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
 .text-center {
   text-align: center;
+}
+
+.font-arial {
+  font-family: Arial;
 }
 
 .font-bebas {
@@ -609,9 +645,24 @@ video {
   line-height: 2.25rem;
 }
 
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-bold {
@@ -629,7 +680,28 @@ video {
 
 .text-textSub {
   --tw-text-opacity: 1;
-  color: rgb(80 250 123 / var(--tw-text-opacity));
+  color: rgb(255 121 198 / var(--tw-text-opacity));
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-buttom {
+  --tw-shadow-color: #50fa7b;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.hover\:bg-textSub:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 121 198 / var(--tw-bg-opacity));
+}
+
+.hover\:text-head:hover {
+  --tw-text-opacity: 1;
+  color: rgb(40 42 54 / var(--tw-text-opacity));
 }
 
 @media (min-width: 640px) {
@@ -640,6 +712,11 @@ video {
   .sm\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .sm\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 }
 
@@ -656,9 +733,18 @@ video {
     height: auto;
   }
 
+  .md\:pt-10 {
+    padding-top: 2.5rem;
+  }
+
   .md\:text-5xl {
     font-size: 3rem;
     line-height: 1;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
   .md\:font-extrabold {
@@ -683,9 +769,24 @@ video {
     flex-direction: row;
   }
 
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .lg\:text-6xl {
     font-size: 3.75rem;
     line-height: 1;
+  }
+
+  .lg\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .lg\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 
   .lg\:text-xl {
