--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -520,12 +520,21 @@ video {
   visibility: visible;
 }
 
+.invisible {
+  visibility: hidden;
+}
+
 .m-2 {
   margin: 0.5rem;
 }
 
 .m-4 {
   margin: 1rem;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .ml-4 {
@@ -542,6 +551,54 @@ video {
 
 .h-48 {
   height: 12rem;
+}
+
+.h-8 {
+  height: 2rem;
+}
+
+.h-52 {
+  height: 13rem;
+}
+
+.h-4 {
+  height: 1rem;
+}
+
+.h-auto {
+  height: auto;
+}
+
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
+.h-56 {
+  height: 14rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-4 {
+  width: 1rem;
+}
+
+.w-auto {
+  width: auto;
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
@@ -567,12 +624,17 @@ video {
 }
 
 .bg-canva {
-  background-color: rgb(189, 147, 249, .1);
+  background-color: rgb(255, 121, 198, 0.1);
 }
 
 .bg-head {
   --tw-bg-opacity: 1;
   background-color: rgb(40 42 54 / var(--tw-bg-opacity));
+}
+
+.bg-textSub {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 121 198 / var(--tw-bg-opacity));
 }
 
 .p-2 {
@@ -585,6 +647,18 @@ video {
 
 .p-5 {
   padding: 1.25rem;
+}
+
+.p-6 {
+  padding: 1.5rem;
+}
+
+.p-7 {
+  padding: 1.75rem;
+}
+
+.p-1 {
+  padding: 0.25rem;
 }
 
 .pt-2 {
@@ -669,12 +743,24 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:visible {
+    visibility: visible;
+  }
+
   .md\:m-10 {
     margin: 2.5rem;
   }
 
   .md\:h-auto {
     height: auto;
+  }
+
+  .md\:h-8 {
+    height: 2rem;
+  }
+
+  .md\:w-8 {
+    width: 2rem;
   }
 
   .md\:pt-10 {
