--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -659,6 +659,11 @@ video {
   color: rgb(248 248 242 / var(--tw-text-opacity));
 }
 
+.text-head {
+  --tw-text-opacity: 1;
+  color: rgb(68 71 90 / var(--tw-text-opacity));
+}
+
 .shadow-2xl {
   --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
   --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
