--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -522,16 +522,16 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.visible {
-  visibility: visible;
-}
-
 .m-2 {
   margin: 0.5rem;
 }
 
 .ml-4 {
   margin-left: 1rem;
+}
+
+.ml-8 {
+  margin-left: 2rem;
 }
 
 .mr-4 {
@@ -570,32 +570,43 @@ video {
   border-radius: 0.5rem;
 }
 
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
 .border-2 {
   border-width: 2px;
 }
 
-.border-borde {
-  --tw-border-opacity: 1;
-  border-color: rgb(68 71 90 / var(--tw-border-opacity));
+.border-dashed {
+  border-style: dashed;
 }
 
-.border-head {
+.border-borde {
   --tw-border-opacity: 1;
-  border-color: rgb(68 71 90 / var(--tw-border-opacity));
+  border-color: rgb(0 43 91 / var(--tw-border-opacity));
+}
+
+.bg-bgButtom {
+  --tw-bg-opacity: 1;
+  background-color: rgb(4 167 119 / var(--tw-bg-opacity));
 }
 
 .bg-canva {
-  background-color: rgb(248, 248, 242, .2);
+  background-color: rgb(249, 226, 175, .1);
 }
 
 .bg-head {
   --tw-bg-opacity: 1;
-  background-color: rgb(68 71 90 / var(--tw-bg-opacity));
+  background-color: rgb(0 43 91 / var(--tw-bg-opacity));
 }
 
-.bg-textSub {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 121 198 / var(--tw-bg-opacity));
+.p-1 {
+  padding: 0.25rem;
+}
+
+.p-1\.5 {
+  padding: 0.375rem;
 }
 
 .p-2 {
@@ -616,10 +627,6 @@ video {
 
 .text-center {
   text-align: center;
-}
-
-.font-arial {
-  font-family: Arial;
 }
 
 .font-bebas {
@@ -645,34 +652,36 @@ video {
   font-weight: 700;
 }
 
+.font-extrabold {
+  font-weight: 800;
+}
+
 .font-normal {
   font-weight: 400;
 }
 
-.text-buttom {
-  --tw-text-opacity: 1;
-  color: rgb(80 250 123 / var(--tw-text-opacity));
-}
-
 .text-head {
   --tw-text-opacity: 1;
-  color: rgb(68 71 90 / var(--tw-text-opacity));
+  color: rgb(0 43 91 / var(--tw-text-opacity));
 }
 
 .text-text {
   --tw-text-opacity: 1;
-  color: rgb(248 248 242 / var(--tw-text-opacity));
+  color: rgb(249 226 175 / var(--tw-text-opacity));
 }
 
-.shadow-2xl {
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.text-textButtom {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.hover\:bg-buttom:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(80 250 123 / var(--tw-bg-opacity));
+.text-textSub {
+  --tw-text-opacity: 1;
+  color: rgb(234 84 85 / var(--tw-text-opacity));
+}
+
+.hover\:bg-hoverButtom:hover {
+  background-color: rgb(4, 167, 119, .8);
 }
 
 @media (min-width: 640px) {
@@ -702,6 +711,10 @@ video {
 
   .md\:w-8 {
     width: 2rem;
+  }
+
+  .md\:p-2 {
+    padding: 0.5rem;
   }
 
   .md\:pt-10 {
