--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -570,6 +570,23 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.border-2 {
+  border-width: 2px;
+}
+
+.border-dashed {
+  border-style: dashed;
+}
+
+.border-borde {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 43 91 / var(--tw-border-opacity));
+}
+
 .bg-bgButtom {
   background-color: rgb(4, 167, 119, .8);
 }
@@ -577,6 +594,10 @@ video {
 .bg-head {
   --tw-bg-opacity: 1;
   background-color: rgb(0 43 91 / var(--tw-bg-opacity));
+}
+
+.bg-canva {
+  background-color: rgb(249, 226, 175, .1);
 }
 
 .p-1 {
@@ -680,6 +701,10 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:m-10 {
+    margin: 2.5rem;
+  }
+
   .md\:h-8 {
     height: 2rem;
   }
@@ -708,6 +733,10 @@ video {
 }
 
 @media (min-width: 1024px) {
+  .lg\:m-20 {
+    margin: 5rem;
+  }
+
   .lg\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
