--- a/styles/input.css
+++ b/styles/input.css
@@ -4,3 +4,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/*Custom Fonts*/
+@font-face {
+  font-family: Monalisa;
+  src: url(/fonts/MonoLisa-Regular.ttf);
+}
